--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
             <h5>File</h5>
             <div class="d-grid gap-1 grid-columns-2">
               <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-new">
-                <div class="fs-4"><i class="bi bi-file-earmark-plus"></i></div>
+                <div class="fs-4"><i class="bi bi-file-earmark"></i></div>
                 <div class="text-truncate">NEW</div>
               </button>
               <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-open">
@@ -720,7 +720,7 @@
                   </div>
                 </div>
                 <div class="text-end">
-                  <button class="w-100 btn btn-lg btn-primary">Create</button>
+                  <button class="w-100 btn btn-lg btn-primary">New Document</button>
                 </div>
                 <hr class="my-1">
                 <div>
