drawBrushPreviewCanvas globalCompositeOperation 단순화

--- a/test/tool/ui.brush.html
+++ b/test/tool/ui.brush.html
@@ -356,6 +356,9 @@
                         <option value="destination-out">destination-out(지우개)</option>
                         <option value="source-in">source-in(교집합)</option>
                         <option value="destination-over">destination-over(뒤에 그리기)</option>
+                        <option value="screen">screen(스크린. 밝아짐)</option>
+                        <option value="multiply">multiply(곱하기. 어두워짐)</option>
+                        <option value="overlay">overlay(오버레이. 더 어둡고 밝게)</option>
                         <!-- 나머지 모드들은 무시한다. -->
                       </select>
                     </div>
