--- a/index.html
+++ b/index.html
@@ -1647,10 +1647,10 @@
               <div class="brush-nav-container mt-3" data-brush-tab="brush">
                 <ul class="nav nav-tabs">
                   <li class="nav-item">
-                    <button type="button" class="nav-link active" data-brush-tab="brush" onclick="WcHelper.brushNavTab(this)" >Brushes</button>
+                    <button type="button" class="nav-link active" data-brush-tab="brush" onclick="WcHelper.brushNavTab(this)" ><i class="bi bi-brush"></i> Brushes</button>
                   </li>
                   <li class="nav-item">
-                    <button type="button" class="nav-link" data-brush-tab="config" onclick="WcHelper.brushNavTab(this)" >Config</button>
+                    <button type="button" class="nav-link" data-brush-tab="config" onclick="WcHelper.brushNavTab(this)" ><i class="bi bi-sliders"></i> Config</button>
                   </li>
                 </ul>
                 <div class="mt-3">
@@ -1687,6 +1687,9 @@
                           <option value="destination-out">destination-out(지우개)</option>
                           <option value="source-in">source-in(교집합)</option>
                           <option value="destination-over">destination-over(뒤에 그리기)</option>
+                          <option value="screen">screen(스크린. 밝아짐)</option>
+                          <option value="multiply">multiply(곱하기. 어두워짐)</option>
+                          <option value="overlay">overlay(오버레이. 더 어둡고 밝게)</option>
                           <!-- 나머지 모드들은 무시한다. -->
                         </select>
                       </div>
