--- a/test/element/test.TextLayer.html
+++ b/test/element/test.TextLayer.html
@@ -65,7 +65,8 @@
         <div class="form-label">default</div>
         <div>
           <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="200"></canvas>
-          <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="200" >
+          <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="200" ></canvas>
+          <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="200" data-text=""></canvas>
         </div>
       </div>
       <div class="rounded border border-1 p-3 text-bg-secondary">
@@ -246,6 +247,31 @@
               >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
             </div>
           </div>
+        </div>
+
+
+      </div>
+      <div class="rounded border border-1 p-3 text-bg-secondary">
+        <div class="d-flex flex-wrap justify-content-around gap-3">
+          <div>
+            <div class="form-label">data-adjust-auto-height=true (자동 높이 조절)</div>
+            <div>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="100" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"break-spaces","padding":"4px"}'
+              data-adjust-auto-height="true"
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"break-spaces","padding":"4px"}'
+              data-adjust-auto-height="true"
+              >abcdefghijklmnopqrstuvwxyz   ABCDEFGHIJKLMNOPQRSTUVWXYZ !@#$%&*()? 가나다라마바사아자차카타파하 あかさたなはまやらわ アカサタナハマヤラワ&#10; 天行健君子以自強不息                                        😀🐶🍕🚗🌈📚🎮🏖️🎉🧸😀🐶🍕🚗🌈📚🎮🏖️🎉🧸</canvas>
+              <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="400"
+              data-text-config='{"fontSize":"14px","overflowWrap":"break-word","wordBreak":"keep-all","whiteSpace":"break-spaces","padding":"4px"}'
+              data-adjust-auto-height="true"
+              data-text=""
+              ></canvas>
+            </div>
+          </div>
+
         </div>
 
 
