--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               <div>
                 <div class="form-label mb-0"><i class="bi bi-bounding-box"></i> Resize</div>
                 <div class="d-flex gap-1">
-                  <button class="btn btn-primary" onclick="if(editor?.document?.layer){ let layer = editor?.document?.layer; layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();}">Fit Document</button>
+                  <button class="btn btn-success" onclick="if(editor?.document?.layer){ let layer = editor?.document?.layer; layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();}"><i class="bi bi-bounding-box"></i> Fit document</button>
                 </div>
               </div>
               
@@ -364,7 +364,14 @@
                   <button class="btn btn-primary" onclick="editor.tool.confirm();"><i class="bi bi-check"></i> Confirm</button>
                   <button class="btn btn-warning" onclick="editor.tool.cancel();"><i class="bi bi-x"></i> Cancel</button>
                 </div>
-              </div>              
+              </div>
+              <div>
+                <div class="form-label mb-0"><i class="bi bi-bounding-box"></i> Resize</div>
+                <div class="d-flex gap-1">
+                  <button class="btn btn-success" onclick="editor.document.layer.adjustAutoHeight();console.log(editor.document.layer.height);editor.document.layer.flush();editor.tool.activate();editor.document.history.save('layer adjustAutoHeight');"><i class="bi bi-distribute-vertical"></i> Auto height</button>
+                  <button class="btn btn-success" onclick="if(editor?.document?.layer){ let layer = editor?.document?.layer; layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();}"><i class="bi bi-bounding-box"></i> Fit document</button>
+                </div>
+              </div>             
             </div>
           </div>
         </div>
@@ -773,6 +780,13 @@
                 <div class="d-flex gap-1">
                   <button class="btn btn-primary" onclick="editor.tool.confirm();"><i class="bi bi-check"></i> Confirm</button>
                   <button class="btn btn-warning" onclick="editor.tool.cancel();"><i class="bi bi-x"></i> Cancel</button>
+                </div>
+              </div>
+              <div>
+                <div class="form-label mb-0"><i class="bi bi-bounding-box"></i> Resize</div>
+                <div class="d-flex gap-1">
+                  <button class="btn btn-success" onclick="editor.document.layer.adjustAutoHeight();console.log(editor.document.layer.height);editor.document.layer.flush();editor.tool.activate();editor.document.history.save('layer adjustAutoHeight');"><i class="bi bi-distribute-vertical"></i> Auto height</button>
+                  <button class="btn btn-success" onclick="if(editor?.document?.layer){ let layer = editor?.document?.layer; layer.adjustSize(layer.parent.width,layer.parent.height);layer.flush();editor.saveHistory();editor.tool.activate();}"><i class="bi bi-bounding-box"></i> Fit document</button>
                 </div>
               </div>
             </div>
