--- a/test/element/test.TextLayer.html
+++ b/test/element/test.TextLayer.html
@@ -74,8 +74,10 @@
       <div class="rounded border border-1 p-3 text-bg-secondary">
         <div class="form-label">from style</div>
         <div>
-          <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="200" style="text-align:center;font-size:30px;color:#ff00ff;font-weight: bold;line-height:1em"></canvas>
+          <canvas class="wc-textlayer" is="wc-textlayer" width="200" height="200" style="text-align:center;font-size:30px;color:#c0c23e;font-weight: bold;line-height:1em;vertical-align: middle;padding: 5px">Style 애트리뷰트로 선언한 textConfig</canvas>
+          <canvas class="wc-textlayer" is="wc-textlayer" data-adjust-auto-height="true" width="200" height="200" style="text-align:center;font-size:30px;color:#c0c23e;font-weight: bold;line-height:1em;vertical-align: middle;padding: 5px;">Style 애트리뷰트로 선언한 textConfig</canvas>
         </div>
+        
         <div class="form-text">같은 프로퍼티명이라면 style의 값을 적용</div>
       </div>
       <div class="rounded border border-1 p-3 text-bg-secondary">
