text-frame-inner 에서 contain 제거

--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
                 <!-- <textarea id="form-text-text" name="text" rows="5" class="form-control" style="height: 200px;"></textarea> -->
                  <div class="form-control mx-auto p-0" style="height: 200px;">
                   <div class="text-frame" id="text-frame" style="overflow: auto;">
-                    <div class="text-frame-inner" style="contain: none;">
+                    <div class="text-frame-inner">
                       <div class="content" id="text-frame-content" contenteditable="plaintext-only"></div>
                     </div>
                   </div>
