--- a/test/element/ui.TextLayer.html
+++ b/test/element/ui.TextLayer.html
@@ -223,8 +223,8 @@
               <!-- <textarea id="form-text-text" name="text" rows="5" class="form-control mx-auto" style="height: 200px;"></textarea> -->
 
               <div class="form-control mx-auto p-0" style="height: 200px;">
-                <div class="text-frame" id="text-frame">
-                  <div class="text-frame-inner">
+                <div class="text-frame" id="text-frame" style="overflow: auto; padding: 0px;">
+                  <div class="text-frame-inner" >
                     <div class="content" id="text-frame-content" contenteditable="plaintext-only"></div>
                   </div>
                 </div>
