--- a/test/index.html
+++ b/test/index.html
@@ -72,6 +72,15 @@
   
       </li>
       <li class="list-group-item">
+        <label class="form-label">lib</label>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="./lib/test.FloodFillPath.html">test.FloodFillPath.html</a>
+          </li>
+        </ul>
+  
+      </li>
+      <li class="list-group-item">
         <label class="form-label">open url from querystring</label>
         <ul class="list-group">
           <li class="list-group-item">
