--- a/test/lib/test.FloodFillPath.html
+++ b/test/lib/test.FloodFillPath.html
@@ -14,7 +14,7 @@
         }
     </style>
     <script type="module">
-        import FloodFillPath from '../../../wc/lib/FloodFillPath.js';
+        import FloodFillPath from '../../wc/lib/FloodFillPath.js';
         window.addEventListener('load',(event)=>{
             const from_canvas = document.getElementById('from_canvas');
             /** 
