wc/draw/ShapePath2D.js

--- a/test/index.html
+++ b/test/index.html
@@ -68,6 +68,9 @@
           <li class="list-group-item">
             <a href="./draw/test.PathShape.html">test.PathShape.html</a>
           </li>
+          <li class="list-group-item">
+            <a href="./draw/test.ShapePath2D.html">test.ShapePath2D.html</a>
+          </li>
         </ul>
   
       </li>
