--- a/index.html
+++ b/index.html
@@ -502,6 +502,13 @@
                   <div class="fs-4"><i class="bi bi-robot"></i></div>
                   <div>Auto Save</div>
                 </button>
+                <button type="button" class="w-100 btn btn-primary" onclick="document.body.dataset.fullscreen=Wc.HtmlUtil.toggleFullscreen().toString();">
+                  <div class="fs-4">
+                    <i class="bi bi-arrows-fullscreen only-shown only-shown-fullscreen-false"></i>
+                    <i class="bi bi-fullscreen-exit only-shown only-shown-fullscreen-true"></i>
+                  </div>
+                  <div>Full screen</div>
+                </button>
                 <button type="button" class="w-100 btn btn-warning" onclick="WcHelper.newForTest(editor)">
                   <div class="fs-4"><i class="bi bi-emoji-smile-upside-down"></i></div>
                   <div>For Test</div>
