--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
           </div>
           <div class="modal-body">
             <div class="d-flex flex-column gap-3 p-1">
-              <form action="" onsubmit="editor.downloadDocument(this.type.value,this.filename.value,this.quality.value).then((r)=>{edialog.alert(`${r.basename}을 다운로드하였습니다.\n(시간이 걸릴 수 있습니다.)`)});return false;">
+              <form action="" onsubmit="editor.downloadDocument(this.type.value,this.filename.value,this.quality.value).then((r)=>{edialog.alert(`${r.basename}을 다운로드를 시작하였습니다.\n(시간이 걸릴 수 있습니다.)`)});return false;">
                 <input type="hidden" name="type" value="png">
                 <div class="d-flex flex-column gap-3">
                   <div class="input-group ">
@@ -679,7 +679,7 @@
           <div class="modal-body">
             <div class="d-flex flex-column gap-3 p-1">
               
-              <form action="" onsubmit="editor.uploadDocument('png',this.filename.value).then(()=>{ console.log('uploadDocument 완료');edialog.alert('Upload 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); edialog.alert(e.message); });return false;">
+              <form action="" onsubmit="editor.uploadDocument('png',this.filename.value).then(()=>{ console.log('uploadDocument 완료');}).catch((e)=>{console.error('uploadDocument 실패',e); edialog.alert(e.message); });return false;">
                 <div class="input-group">
                   <span class="input-group-text"><i class="bi bi-filetype-png"></i></span>
                   <input type="text" class="form-control filename"  name="filename" value="" required>
@@ -687,7 +687,7 @@
                   <button type="submit" class="btn btn-lg btn-primary"> UPLOAD </button>
                 </div>
               </form>
-              <form action="" onsubmit="editor.uploadDocument('wc3.json',this.filename.value).then(()=>{ console.log('uploadDocument 완료');edialog.alert('Upload 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); edialog.alert(e.message); });return false;">
+              <form action="" onsubmit="editor.uploadDocument('wc3.json',this.filename.value).then(()=>{ console.log('uploadDocument 완료');}).catch((e)=>{console.error('uploadDocument 실패',e); edialog.alert(e.message); });return false;">
                 <div class="input-group">
                   <span class="input-group-text"><i class="bi bi-filetype-json"></i></span>
                   <input type="text" class="form-control filename" name="filename" value="" required>
@@ -696,7 +696,7 @@
                 </div>
                 <div class="form-text text-end mt-0 mb-2"><i class="bi bi-info-circle"></i> 레이어 정보가 같이 저장됩니다.</div>
               </form>
-              <form action="" onsubmit="editor.uploadDocument('wc3.zip',this.filename.value).then(()=>{ console.log('uploadDocument 완료');edialog.alert('Upload 완료'); }).catch((e)=>{console.error('uploadDocument 실패',e); edialog.alert(e.message); });return false;">
+              <form action="" onsubmit="editor.uploadDocument('wc3.zip',this.filename.value).then(()=>{ console.log('uploadDocument 완료');}).catch((e)=>{console.error('uploadDocument 실패',e); edialog.alert(e.message); });return false;">
                 <div class="input-group">
                   <span class="input-group-text"><i class="bi bi-filetype-json"></i></span>
                   <input type="text" class="form-control filename" name="filename" value="" required>
