third_party/ui-exclusive-dialog update

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
   <script src="//unpkg.com/@ungap/custom-elements/es.js"></script>
 
 
-  <!-- third_party/ui-exclusive-dialog -->
-  
+  <!-- third_party/ui-exclusive-dialog --> 
+  <link rel="stylesheet" href="third_party/ui-exclusive-dialog/exclusiveDialog.css">
   <link rel="stylesheet" href="third_party/ui-exclusive-dialog/sample/bs5.css">
   <script src="third_party/ui-exclusive-dialog/ExclusiveDialog.js"></script>
 
