reverse-buttons-for-mobile

--- a/index.html
+++ b/index.html
@@ -2185,31 +2185,31 @@
     </script>
 
     <div class="exclusive-dialog-container exclusive-dialog-container-bs5 sample-2">
-        <dialog class="dialog-alert" data-dialog-id="alert">
+        <dialog class="dialog-alert reverse-buttons-for-mobile" data-dialog-id="alert">
             <form action="" method="dialog" >
                 <div class="card shadow ">
                     <div class="card-header"><i class="bi bi-info-square"></i> Alert</div>
                     <div class="card-body overflow-y-auto pb-0 dialog-message"></div>
-                    <div class="card-body d-flex gap-3">
+                    <div class="card-body d-flex gap-3 exclusive-dialog-buttons">
                             <button type="submit" class="btn btn-primary flex-fill" >확인</button>
                     </div>
                 </div>
             </form>
         </dialog>
 
-        <dialog class="dialog-confirm" data-dialog-id="confirm">
+        <dialog class="dialog-confirm reverse-buttons-for-mobile" data-dialog-id="confirm">
             <form action="" method="dialog">
                 <div class="card shadow ">
                     <div class="card-header"><i class="bi bi-question-square"></i> Confirm</div>
                     <div class="card-body overflow-y-auto pb-0 dialog-message"></div>
-                    <div class="card-body d-flex gap-3">
+                    <div class="card-body d-flex gap-3 exclusive-dialog-buttons">
                         <button type="submit" class="btn btn-success flex-fill" onclick="ExclusiveDialog.close(this,true)">확인</button>
                         <button type="button" class="btn btn-danger flex-fill" onclick="ExclusiveDialog.close(this,false)">취소</button>
                     </div>
                 </div>
             </form>
         </dialog>
-        <dialog class="dialog-prompt" data-dialog-id="prompt">
+        <dialog class="dialog-prompt reverse-buttons-for-mobile" data-dialog-id="prompt">
             <form action="" method="dialog" onsubmit="ExclusiveDialog.close(this,this.input.value);return false;">
                 <div class="card shadow ">
                     <div class="card-header"><i class="bi bi-chat-right-text"></i> Prompt</div>
@@ -2217,7 +2217,7 @@
                     <div class="card-body d-flex flex-column gap-3 pb-0">
                         <input class="dialog-input form-control" type="text" name="input">
                     </div>
-                    <div class="card-body d-flex gap-3">
+                    <div class="card-body d-flex gap-3 exclusive-dialog-buttons">
                         <button type="submit" class="btn btn-success flex-fill" >확인</button>
                         <button type="button" class="btn btn-danger flex-fill" onclick="ExclusiveDialog.close(this,null)">취소</button>
                     </div>
