--- a/index.html
+++ b/index.html
@@ -515,6 +515,12 @@
                   </div>
                   <div>Full screen</div>
                 </button>
+                <button type="button" class="w-100 btn btn-primary" onclick="WcHelper.toggleColorTheme()">
+                  <div class="fs-4">
+                    <i class="bi bi-paint-bucket"></i>
+                  </div>
+                  <div><small>Color theme</small></div>
+                </button>
                 <button type="button" class="w-100 btn btn-warning" onclick="WcHelper.newForTest(editor)">
                   <div class="fs-4"><i class="bi bi-emoji-smile-upside-down"></i></div>
                   <div>For Test</div>
