--- a/index.html
+++ b/index.html
@@ -197,14 +197,7 @@
   </script>
   <link rel="stylesheet" href="asset/utt-custom.css">
   <!-- //ui-transform-tool -->
-  
-  
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="asset/fonts.css">
-  <link rel="stylesheet" href="asset/style.css">
-  
-  
+  <!-- ui-input-stepper -->
   <link rel="stylesheet" href="third_party/ui-input-stepper/ui-input-stepper.css">
   <script src="third_party/ui-input-stepper/UiInputStepper.js"></script>
   <script>
@@ -213,6 +206,15 @@
       UiInputStepper.initDataValue()
     })
   </script>
+  <!-- //ui-input-stepper -->
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="asset/fonts.css">
+  <link rel="stylesheet" href="asset/style.css">
+  
+  
+
   
   <style>
     /* canvas{
