--- a/index.html
+++ b/index.html
@@ -465,28 +465,28 @@
           </div>
           <div class="modal-body border-bottom">
             <h5>File</h5>
-            <div class="d-grid gap-1 grid-columns-2">
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-new">
+            <div class="d-grid gap-1 grid-columns-4">
+              <button type="button" class="w-100 min-w-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-new">
                 <div class="fs-4"><i class="bi bi-file-earmark"></i></div>
                 <div class="text-truncate">NEW</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-open">
+              <button type="button" class="w-100 min-w-0 btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-file-open">
                 <div class="fs-4"><i class="bi bi-folder2-open"></i></div>
                 <div class="text-truncate">OPEN</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-success" data-bs-toggle="modal" data-bs-target="#modal-file-download">
+              <button type="button" class="w-100 min-w-0 btn btn-success" data-bs-toggle="modal" data-bs-target="#modal-file-download">
                 <div class="fs-4"><i class="bi bi-file-earmark-arrow-down"></i></div>
                 <div class="text-truncate">DOWNLOAD</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-success" data-bs-toggle="modal" data-bs-target="#modal-file-upload">
+              <button type="button" class="w-100 min-w-0 btn btn-success" data-bs-toggle="modal" data-bs-target="#modal-file-upload">
                 <div class="fs-4"><i class="bi bi-cloud-upload"></i></div>
                 <div class="text-truncate">UPLOAD</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-secondary" onclick="editor.previewDocument()">
+              <button type="button" class="w-100 min-w-0 btn btn-secondary" onclick="editor.previewDocument()">
                 <div class="fs-4"><i class="bi bi-image"></i></div>
                 <div class="text-truncate">PREVIEW</div>
               </button>
-              <button type="button" class="w-100 min-w-0 btn btn-lg btn-danger" onclick="editor.closeDocument()">
+              <button type="button" class="w-100 min-w-0 btn btn-danger" onclick="editor.closeDocument()">
                 <div class="fs-4"><i class="bi bi-x-circle"></i></div>
                 <div class="text-truncate">CLOSE</div>
               </button>
