--- a/test/index.html
+++ b/test/index.html
@@ -92,6 +92,15 @@
         </ul>
   
       </li>
+      <li class="list-group-item">
+        <label class="form-label">Test for stylus pen</label>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="stylus.html">Test stylus</a>
+          </li>
+        </ul>
+  
+      </li>
     </ul>
   </div>
   
