--- a/test/index.html
+++ b/test/index.html
@@ -52,6 +52,10 @@
           <li class="list-group-item">
             <a href="./element/ui.TextLayer.html">ui.TextLayer.html</a>
           </li>
+          <li class="list-group-item">
+            <a href="./element/test.ShapePath2DLayer.html">test.ShapePath2DLayer.html</a> ( developing )
+          </li>
+          
         </ul>  
       </li>
       <li class="list-group-item">
