--- a/test/element/test.ShapePath2DLayer.html
+++ b/test/element/test.ShapePath2DLayer.html
@@ -71,6 +71,45 @@
       shapePath2DLayer.commands.push({ closed:false, method:'star', args:[160, 510, 50, 25 , 6, -0.5 * Math.PI] });
       shapePath2DLayer.commands.push({ closed:false, method:'star', args:[260, 510, 50, 25 , 7] });
       shapePath2DLayer.flush();
+
+      const selected_area = document.getElementById('selected_area');
+      selected_area.contextConfig.foreColor = '#3693';
+      selected_area.contextConfig.backColor = '#f99';
+      selected_area.contextConfig.lineWidth = 2
+      selected_area.ctx.setLineDash([2, 6]);
+      selected_area.drawMode = 'fill-stroke';
+
+      const selected_area_points = [];
+      let is_down = false;
+      const command = { closed:true, method:'lines', args:[selected_area_points] }
+      selected_area.commands.push(command);
+      selected_area.onpointerdown = (event)=>{
+        is_down = true;
+        event.target.setPointerCapture(event.pointerId);
+        command.args[0].length = 0;
+        command.args[0] = [];
+        command.args[0].push([event.offsetX,event.offsetY]);
+        command.closed = false;
+        selected_area.drawMode = 'stroke';
+        console.log(event.type,command);        
+      }
+      selected_area.onpointermove = (event)=>{
+        if(!is_down){return}
+        command.args[0].push([event.offsetX,event.offsetY]);
+        command.closed = false;
+        selected_area.drawMode = 'stroke';
+        selected_area.flush()
+        console.log(event.type,command);
+      }
+      selected_area.onpointerup = (event)=>{
+        is_down = false;
+        event.target.releasePointerCapture(event.pointerId);
+        command.args[0].push([event.offsetX,event.offsetY]);
+        command.closed = true;
+        selected_area.drawMode = 'fill-stroke';
+        selected_area.flush()
+        console.log(event.type,command);
+      }
     })
     /*
     [
@@ -128,9 +167,15 @@
     <h1>test ShapePath2DLayer</h1>
     <div class="d-flex flex-column gap-3">
       <div class="rounded border border-1 p-3 text-bg-secondary">
-        <div class="form-label">test</div>
+        <div class="form-label">path command 추가</div>
         <div>
           <div id="div-append"></div>
+        </div>
+      </div>
+      <div class="rounded border border-1 p-3 text-bg-secondary">
+        <div class="form-label">마우스 드래그로 영역 지정하기</div>
+        <div>
+          <canvas id="selected_area" is="wc-shapepath2dlayer" width="300" height="300"></canvas>
         </div>
       </div>
       
